--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.6",
+    "swagger-ui-express": "^4.1.6",
     "tsconfig-paths": "^3.11.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37",
@@ -30,6 +31,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.7.1",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
