--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.7.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
+    "nodemailer": "^6.6.3",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
