--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dayjs": "1.10.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jest": "^27.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
